[package]
name = "ppatcher"
version = "0.1.0"
authors = ["Stefan Achatz <erazor_de@users.sourceforge.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/erazor-de/ppatcher"
description = """
A command line tool to search/replace binary data via patterns
"""

[dependencies]
structopt = "0.3"
ppatch = "0.1"
